[gd_scene load_steps=3 format=3 uid="uid://qi0ecr8w1pfe"]

[ext_resource type="Script" path="res://DebugConsole/Scripts/debug_genarator.gd" id="1_vqv86"]
[ext_resource type="Theme" uid="uid://cedhnxugilj7g" path="res://UI/theme.tres" id="1_xcm1l"]

[node name="Genarator" type="PanelContainer"]
custom_minimum_size = Vector2(32, 32)
size_flags_horizontal = 0
script = ExtResource("1_vqv86")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_xcm1l")
text = "Новая Генерация"

[node name="ClearButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_xcm1l")
text = "Очистить"

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 64.0
value = 1.0
scrollable = false

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
size_flags_vertical = 8

[connection signal="pressed" from="VBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="drag_ended" from="VBoxContainer/HSlider" to="." method="_on_h_slider_drag_ended"]
